fix: status hiding

--- a/frontend/src/apps/giger/gig/gig.scss
+++ b/frontend/src/apps/giger/gig/gig.scss
@@ -181,9 +181,13 @@
     }
 
     &__status {
-        display: flex;
+        display: none;
         align-items: center;
         gap: 0.5rem;
+
+        &--shown {
+            display: flex;
+        }
 
         &::before {
             content: '';
