--- a/frontend/src/apps/myId/medical/event-record.scss
+++ b/frontend/src/apps/myId/medical/event-record.scss
@@ -15,6 +15,10 @@
         justify-content: flex-start;
         position: relative;
         flex-direction: column;
+
+        &--new {
+            flex-direction: row;
+        }
     }
 
     &__header {
